# vox

./: .coderabbit.yaml  .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: QA-ARCHITECTURE-REPORT.md  QA-SECURITY-REPORT.md  QA-UX-REPORT.md  index.html
scripts/finetune/: build_dataset.py  train.py
src/vox/: __init__.py  cli.py  config.py  engine.py
src/vox/agents/: __init__.py  amp.py  base.py  claude.py  codex.py  droid.py  gemini.py  pi.py  router.py
src/vox/bench/: __init__.py  harness.py  tasks.py
src/vox/voice/: __init__.py  asr.py  recorder.py  tts.py
tests/: test_agents.py  test_bench.py  test_config.py  test_engine.py  test_voice.py
