[project]
name = "vox-shell"
version = "0.3.0"
description = "Personal terminal agent. Voice, AI agents, and natural language to shell — all local."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Arya Teja" }]
keywords = ["shell", "terminal", "natural-language", "ai", "cli", "voice", "bash", "ollama", "agent", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.24",
    "rich>=13.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
voice = [
    "mlx-audio>=0.4",
    "sounddevice>=0.4",
]
finetune = [
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.18",
]
all = [
    "vox-shell[voice,finetune]",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[project.scripts]
vox = "vox.cli:main"

[project.urls]
Homepage = "https://aryateja2106.github.io/vox"
Repository = "https://github.com/aryateja2106/vox"
Issues = "https://github.com/aryateja2106/vox/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "T20", "SIM", "RUF"]
ignore = ["T201", "S101", "S602", "S603", "S606", "S607", "E501", "S108"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "mlx_audio.**",
    "mlx.**",
    "numpy.**",
    "sounddevice.**",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
